--- a/Windows/ppsspp.rc
+++ b/Windows/ppsspp.rc
@@ -368,7 +368,7 @@ END
 
 // Icon with lowest ID value placed first to ensure application icon
 // remains consistent on all systems.
-IDI_PPSSPP              ICON                    "ppsspp.ico"
+IDI_PPSSPP              ICON                    "ppssppvr.ico"
 IDI_STOP                ICON                    "icon1.ico"
 IDI_STOPDISABLE         ICON                    "stop1.ico"
 
