Modify project files to support VR libraries.

--- a/Common/Common.vcxproj
+++ b/Common/Common.vcxproj
@@ -189,6 +189,15 @@
       <Command>../Windows/git-version-gen.cmd</Command>
     </PreBuildEvent>
   </ItemDefinitionGroup>
+    <ItemDefinitionGroup>
+    <ClCompile>
+      <!--Allow compile-time testing of whether Oculus SDK (aka LibOVR) is present-->
+      <PreprocessorDefinitions Condition="Exists('../ext/LibOVR')">HAVE_OCULUSSDK;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <PreprocessorDefinitions Condition="Exists('../ext/openvr')">HAVE_OPENVR;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <PreprocessorDefinitions Condition="Exists('../ext/OSVR')">HAVE_OSVR;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <AdditionalIncludeDirectories>../ext/zlib;../ext/LibOVR/Include;../ext/LibOVR/Src;../ext/openvr/headers;../ext/OSVR/include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+    </ClCompile>
+  </ItemDefinitionGroup>
   <ItemGroup>
     <ClInclude Include="ABI.h" />
     <ClInclude Include="Arm64Emitter.h" />
