The start of VR support, mostly copied from Dolphin VR. In OpenGL, it now displays on the Rift! The mirror window isn't working yet though. And there is no stereoscopy yet. And the only head-tracking comes from TimeWarp. And it isn't the right aspect ratio. And the menus don't display on the Rift. But it is surprisingly playable.

--- a/GPU/GPU.vcxproj
+++ b/GPU/GPU.vcxproj
@@ -258,6 +258,7 @@
     <ClInclude Include="GLES\TextureScaler.h" />
     <ClInclude Include="GLES\TransformPipeline.h" />
     <ClInclude Include="GLES\VertexShaderGenerator.h" />
+    <ClInclude Include="GLES\VROGL.h" />
     <ClInclude Include="GPU.h" />
     <ClInclude Include="GPUCommon.h" />
     <ClInclude Include="GPUInterface.h" />
@@ -337,6 +338,7 @@
     <ClCompile Include="GLES\TextureScaler.cpp" />
     <ClCompile Include="GLES\TransformPipeline.cpp" />
     <ClCompile Include="GLES\VertexShaderGenerator.cpp" />
+    <ClCompile Include="GLES\VROGL.cpp" />
     <ClCompile Include="GPU.cpp" />
     <ClCompile Include="GPUCommon.cpp" />
     <ClCompile Include="GPUState.cpp" />
