--- a/GPU/GPU.vcxproj.filters
+++ b/GPU/GPU.vcxproj.filters
@@ -201,6 +201,9 @@
     <ClInclude Include="Common\VR920.h">
       <Filter>Common</Filter>
     </ClInclude>
+    <ClInclude Include="GLES\VROGL.h">
+      <Filter>GLES</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Math3D.cpp">
@@ -385,6 +388,9 @@
     </ClCompile>
     <ClCompile Include="Common\VR920.cpp">
       <Filter>Common</Filter>
+    </ClCompile>
+    <ClCompile Include="GLES\VROGL.cpp">
+      <Filter>GLES</Filter>
     </ClCompile>
   </ItemGroup>
 </Project>
