--- a/GPU/GPU.vcxproj.filters
+++ b/GPU/GPU.vcxproj.filters
@@ -204,6 +204,9 @@
     <ClInclude Include="GLES\VROGL.h">
       <Filter>GLES</Filter>
     </ClInclude>
+    <ClInclude Include="GLES\GeometryShaderGenerator.h">
+      <Filter>GLES</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Math3D.cpp">
@@ -390,6 +393,9 @@
       <Filter>Common</Filter>
     </ClCompile>
     <ClCompile Include="GLES\VROGL.cpp">
+      <Filter>GLES</Filter>
+    </ClCompile>
+    <ClCompile Include="GLES\GeometryShaderGenerator.cpp">
       <Filter>GLES</Filter>
     </ClCompile>
   </ItemGroup>
