Update Mercury issues.

--- a/Sys/GameSettings/UCAS40021.ini
+++ b/Sys/GameSettings/UCAS40021.ini
@@ -19,4 +19,4 @@ HudFullscreen = False
 TelescopeEye = 0
 MetroidPrime = 0
 VRStateId = 4
-VRIssues = dizzy start of level, culling, black movies, tilted menu, curtain at wrong depth, press X to fix camera angle
+VRIssues = dizzy start of level, culling, tilted menu, curtain at wrong depth, press X to fix camera angle
