7 Wonders of the Ancient World and Assassin's Creed: Bloodlines. Other INI files are updated.

--- a/Sys/GameSettings/NPJH50065.ini
+++ b/Sys/GameSettings/NPJH50065.ini
@@ -20,4 +20,4 @@ HudOnTop = True
 TelescopeEye = 0
 MetroidPrime = 0
 VRStateId = 4
-VRIssues = Motion sickness, very faint screenspace effects on HUD, character on HUD if too close
+VRIssues = Planet's Core sky, Motion sickness, very faint screenspace effects on HUD, character on HUD if too close
