--- a/Sys/GameSettings/ULES00601.ini
+++ b/Sys/GameSettings/ULES00601.ini
@@ -18,7 +18,7 @@ HudFullscreen = False
 TelescopeEye = 0
 MetroidPrime = 0
 HudOnTop = True
-DontClearScreen = False
+DontClearScreen = True
 CanReadCameraAngles = False
 DetectSkybox = False
 VRStateId = 4
