--- a/Sys/GameSettings/ULUS10345.ini
+++ b/Sys/GameSettings/ULUS10345.ini
@@ -1,6 +1,6 @@
 ﻿# ULUS10345 - Star Wars: The Force Unleashed
 [VR]
-UnitsPerMetre = 1.000999
+UnitsPerMetre = 0.01
 HudThickness = 0.500000
 HudDistance = 1.500000
 CameraForward = 0.000000
@@ -22,4 +22,4 @@ DontClearScreen = False
 CanReadCameraAngles = False
 DetectSkybox = False
 VRStateId = 1
-VRIssues = Doesn't clear screen, upsidedown menu logo, impossible to see anything
+VRIssues = All 3D is upside down, always tiny, can't see
