--- a/Sys/GameSettings/NPUH10023.ini
+++ b/Sys/GameSettings/NPUH10023.ini
@@ -3,23 +3,23 @@
 UnitsPerMetre = 1.0
 HudThickness = 0.1
 HudDistance = 3
-CameraForward = 2.500000
-CameraPitch = 0.000000
-AimDistance = 40.000000
-ScreenHeight = 1.000000
-ScreenThickness = 0.500000
-ScreenDistance = 1.500000
-ScreenRight = 0.000000
-ScreenUp = 0.000000
-ScreenPitch = 0.000000
-TelescopeMaxFOV = 0.000000
+CameraForward = 2.5
+CameraPitch = 0.0
+AimDistance = 40.0
+ScreenHeight = 1.0
+ScreenThickness = 0.2
+ScreenDistance = 1.5
+ScreenRight = 0.0
+ScreenUp = 0.0
+ScreenPitch = 0.0
+TelescopeMaxFOV = 0.0
 Disable3D = False
 HudFullscreen = False
 TelescopeEye = 0
 MetroidPrime = 0
 HudOnTop = False
-DontClearScreen = False
+DontClearScreen = True
 CanReadCameraAngles = False
 DetectSkybox = False
 VRStateId = 4
-VRIssues = minor issues with mech shadows when far, camera angles
+VRIssues = FMV issues, minor issues with mech shadows when far, camera angles
