--- a/Sys/GameSettings/ULUS10455.ini
+++ b/Sys/GameSettings/ULUS10455.ini
@@ -1,14 +1,14 @@
-﻿# UCUS98632 - Gran Turismo®
+﻿# ULUS10455 - Assassin's Creed: Bloodlines™
 [VR]
 UnitsPerMetre = 1.0
-HudThickness = 0.5
-HudDistance = 1.5
+HudThickness = 0.03
+HudDistance = 0.25
 CameraForward = 0.0
 CameraPitch = 0.0
 AimDistance = 7.0
-ScreenHeight = 1.0
-ScreenThickness = 0.5
-ScreenDistance = 1.5
+ScreenHeight = 0.15
+ScreenThickness = 0.01
+ScreenDistance = 0.27
 ScreenRight = 0.0
 ScreenUp = 0.0
 ScreenPitch = 0.0
@@ -21,5 +21,5 @@ HudOnTop = False
 DontClearScreen = False
 CanReadCameraAngles = False
 DetectSkybox = False
-VRStateId = 3
-VRIssues = invisible ingame menu, viewport issues, menu issues, partial skybox
+VRStateId = 2
+VRIssues = move through the HUD to see, culling
