--- a/Sys/GameSettings/ULUS10566.ini
+++ b/Sys/GameSettings/ULUS10566.ini
@@ -20,4 +20,4 @@ HudOnTop = True
 TelescopeEye = 0
 MetroidPrime = 0
 VRStateId = 4
-VRIssues = Motion sickness, very faint screenspace effects on HUD, character on HUD if too close
+VRIssues = Planet's Core sky, Motion sickness, very faint screenspace effects on HUD, character on HUD if too close
