Update INI files for Don't Draw Screen Space option. James Cameron's Avatar has gone from "bad" to "good".

--- a/Sys/GameSettings/NPJH50065.ini
+++ b/Sys/GameSettings/NPJH50065.ini
@@ -19,5 +19,6 @@ HudFullscreen = False
 HudOnTop = True
 TelescopeEye = 0
 MetroidPrime = 0
+DontDrawScreenSpace = True
 VRStateId = 4
-VRIssues = Planet's Core sky, Motion sickness, very faint screenspace effects on HUD, character on HUD if too close
+VRIssues = Planet's Core sky, Motion sickness, character invisible if too close
