--- a/Sys/GameSettings/NPUH10023.ini
+++ b/Sys/GameSettings/NPUH10023.ini
@@ -21,5 +21,6 @@ HudOnTop = False
 DontClearScreen = True
 CanReadCameraAngles = False
 DetectSkybox = False
+DontDrawScreenSpace = True
 VRStateId = 4
 VRIssues = FMV issues, minor issues with mech shadows when far, camera angles
