--- a/Sys/GameSettings/ULES00601.ini
+++ b/Sys/GameSettings/ULES00601.ini
@@ -21,5 +21,6 @@ HudOnTop = True
 DontClearScreen = True
 CanReadCameraAngles = False
 DetectSkybox = False
+DontDrawScreenSpace = False
 VRStateId = 4
 VRIssues = Camera angles, no subtitles, minor HUD depth issues, imperfect depth layering in start screen
