--- a/Sys/GameSettings/ULUS10227.ini
+++ b/Sys/GameSettings/ULUS10227.ini
@@ -21,5 +21,6 @@ HudOnTop = False
 DontClearScreen = False
 CanReadCameraAngles = False
 DetectSkybox = False
+DontDrawScreenSpace = False
 VRStateId = 5
 VRIssues = Completely 2D
