--- a/Sys/GameSettings/ULUS10455.ini
+++ b/Sys/GameSettings/ULUS10455.ini
@@ -21,5 +21,6 @@ HudOnTop = False
 DontClearScreen = False
 CanReadCameraAngles = False
 DetectSkybox = False
+DontDrawScreenSpace = True
 VRStateId = 2
-VRIssues = move through the HUD to see, culling
+VRIssues = move through the HUD to see, lots of culling
