--- a/Sys/GameSettings/ULUS10017.ini
+++ b/Sys/GameSettings/ULUS10017.ini
@@ -18,5 +18,6 @@ Disable3D = False
 HudFullscreen = False
 TelescopeEye = 0
 MetroidPrime = 0
+DontDrawScreenSpace = False
 VRStateId = 4
 VRIssues = dizzy start of level, culling, tilted menu, curtain at wrong depth, press X to fix camera angle
