--- a/Sys/GameSettings/ULUS10451.ini
+++ b/Sys/GameSettings/ULUS10451.ini
@@ -1,8 +1,8 @@
 ﻿# ULUS10451 - James Cameron's AVATAR™: THE GAME
 [VR]
 UnitsPerMetre = 1.0
-HudThickness = 500
-HudDistance = 0.35
+HudThickness = 0.5
+HudDistance = 2.0
 CameraForward = 0.0
 CameraPitch = 10.0
 AimDistance = 7.0
@@ -21,5 +21,6 @@ HudOnTop = False
 DontClearScreen = False
 CanReadCameraAngles = False
 DetectSkybox = False
-VRStateId = 2
-VRIssues = Garbage on HUD blocks view (freelook past to hide it), camera angles
+DontDrawScreenSpace = True
+VRStateId = 4
+VRIssues = camera angles
