Bruteforcing... looks like it works, but I'm not getting any results. Am I modifying the functions correctly? You can choose bruteforcing from the Debug menu. It will run automatically until it has finished, restarting PPSSPP VR if necessary. The output will be screenshots in the game id folder in memstick\PSP\SCREENSHOT. The name of the image specifies the function number, function address, function name, and how many vertices were drawn. Screenshots are only saved if the number of vertices is different.

--- a/Windows/ppsspp.rc
+++ b/Windows/ppsspp.rc
@@ -424,7 +424,9 @@ BEGIN
         MENUITEM "Dump Next Frame to Log",                  ID_DEBUG_DUMPNEXTFRAME
         MENUITEM "Take Screenshot",                         ID_DEBUG_TAKESCREENSHOT
         MENUITEM SEPARATOR
-        MENUITEM "Show Debug Statistics",                   ID_DEBUG_SHOWDEBUGSTATISTICS
+		MENUITEM "Bruteforce Culling Codes",                ID_DEBUG_BRUTEFORCE
+		MENUITEM SEPARATOR
+		MENUITEM "Show Debug Statistics", ID_DEBUG_SHOWDEBUGSTATISTICS
         MENUITEM "Ignore Illegal Reads/Writes",             ID_DEBUG_IGNOREILLEGALREADS
         MENUITEM "Run on Load",                             ID_DEBUG_RUNONLOAD
         MENUITEM SEPARATOR
