Update settings for previously upsidedown and tiny games.

--- a/Sys/GameSettings/UCUS98648.ini
+++ b/Sys/GameSettings/UCUS98648.ini
@@ -22,5 +22,5 @@ DontClearScreen = False
 CanReadCameraAngles = False
 DetectSkybox = False
 DontDrawScreenSpace = True
-VRStateId = 1
-VRIssues = tiny and upsidedown
+VRStateId = 2
+VRIssues = missing textures, black terrain
