--- a/Sys/GameSettings/ULUS10345.ini
+++ b/Sys/GameSettings/ULUS10345.ini
@@ -1,25 +1,25 @@
 ﻿# ULUS10345 - Star Wars: The Force Unleashed
 [VR]
-UnitsPerMetre = 0.01
-HudThickness = 0.500000
-HudDistance = 1.500000
-CameraForward = 0.000000
-CameraPitch = 0.000000
-AimDistance = 7.000000
-ScreenHeight = 1.000000
-ScreenThickness = 0.500000
-ScreenDistance = 1.500000
-ScreenRight = 0.000000
-ScreenUp = 0.000000
-ScreenPitch = 0.000000
-TelescopeMaxFOV = 0.000000
+UnitsPerMetre = 100.0
+HudThickness = 0.1
+HudDistance = 1.5
+CameraForward = 0.0
+CameraPitch = 0.0
+AimDistance = 7.0
+ScreenHeight = 1.0
+ScreenThickness = 0.1
+ScreenDistance = 1.5
+ScreenRight = 0.0
+ScreenUp = 0.0
+ScreenPitch = 0.0
+TelescopeMaxFOV = 0.0
 Disable3D = False
 HudFullscreen = False
 TelescopeEye = 0
 MetroidPrime = 0
-HudOnTop = False
+HudOnTop = True
 DontClearScreen = False
 CanReadCameraAngles = False
 DetectSkybox = False
-VRStateId = 1
-VRIssues = All 3D is upside down, always tiny, can't see
+VRStateId = 2
+VRIssues = red stripes on HUD, skybox is near, culling, slow
