--- a/Sys/GameSettings/ULUS10063.ini
+++ b/Sys/GameSettings/ULUS10063.ini
@@ -1,13 +1,13 @@
 ﻿# ULUS10063 - Prince of Persia - Revelations
 [VR]
 UnitsPerMetre = 1.000000
-HudThickness = 0.500000
+HudThickness = 0.000000
 HudDistance = 1.500000
 CameraForward = 0.000000
 CameraPitch = 0.000000
 AimDistance = 7.000000
 ScreenHeight = 1.500000
-ScreenThickness = 0.500000
+ScreenThickness = 0.000000
 ScreenDistance = 1.500000
 ScreenRight = 0.000000
 ScreenUp = 0.000000
@@ -22,5 +22,5 @@ DontClearScreen = False
 CanReadCameraAngles = False
 DetectSkybox = False
 DontDrawScreenSpace = True
-VRStateId = 1
-VRIssues = Tiny and upsidedown, flickering videos
+VRStateId = 3
+VRIssues = seasickness, camera angles, flickering videos
