--- a/Sys/GameSettings/ULUS10472.ini
+++ b/Sys/GameSettings/ULUS10472.ini
@@ -1,18 +1,18 @@
 ﻿# ULUS10472 - Army of TWO™: The 40th Day
 [VR]
-UnitsPerMetre = 1.000000
-HudThickness = 0.500000
-HudDistance = 1.500000
-CameraForward = 0.000000
-CameraPitch = 0.000000
-AimDistance = 7.000000
-ScreenHeight = 2.000000
-ScreenThickness = 0.500000
-ScreenDistance = 1.500000
-ScreenRight = 0.000000
-ScreenUp = 0.000000
-ScreenPitch = 0.000000
-TelescopeMaxFOV = 0.000000
+UnitsPerMetre = 128.0
+HudThickness = 0.5
+HudDistance = 1.5
+CameraForward = 0.0
+CameraPitch = 0.0
+AimDistance = 7.0
+ScreenHeight = 2.0
+ScreenThickness = 0.5
+ScreenDistance = 1.5
+ScreenRight = 0.0
+ScreenUp = 0.0
+ScreenPitch = 0.0
+TelescopeMaxFOV = 0.0
 Disable3D = False
 HudFullscreen = False
 TelescopeEye = 0
@@ -22,5 +22,5 @@ DontClearScreen = False
 CanReadCameraAngles = False
 DetectSkybox = False
 DontDrawScreenSpace = True
-VRStateId = 1
-VRIssues = Tiny and upsidedown
+VRStateId = 3
+VRIssues = Flickering HUD
