--- a/Sys/GameSettings/ULUS10486.ini
+++ b/Sys/GameSettings/ULUS10486.ini
@@ -1,8 +1,8 @@
 ﻿# ULUS10486 - Ghostbusters: The Video Game
 [VR]
-UnitsPerMetre = 1.000000
+UnitsPerMetre = 3.28
 HudThickness = 0.500000
-HudDistance = 1.500000
+HudDistance = 1.600000
 CameraForward = 0.000000
 CameraPitch = 0.000000
 AimDistance = 7.000000
@@ -22,5 +22,5 @@ DontClearScreen = False
 CanReadCameraAngles = False
 DetectSkybox = False
 DontDrawScreenSpace = True
-VRStateId = 1
-VRIssues = tiny and upsidedown
+VRStateId = 3
+VRIssues = culling
