Update settings now that Ghost In The Shell, and the Ape Academy games no longer have upsidedown HUDs.

--- a/Sys/GameSettings/ULUS10020.ini
+++ b/Sys/GameSettings/ULUS10020.ini
@@ -23,4 +23,4 @@ CanReadCameraAngles = False
 DetectSkybox = False
 DontDrawScreenSpace = True
 VRStateId = 2
-VRIssues = Upsidedown flickering HUD, 2D screen blocking view
+VRIssues = flickering HUD, flickering background, 2D screen blocking view
