--- a/Sys/GameSettings/UCES00010.ini
+++ b/Sys/GameSettings/UCES00010.ini
@@ -2,13 +2,13 @@
 [VR]
 UnitsPerMetre = 100.000000
 HudThickness = 0.000000
-HudDistance = 0.200000
+HudDistance = 0.300000
 CameraForward = 0.000000
 CameraPitch = 0.000000
 AimDistance = 7.000000
 ScreenHeight = 2.000000
 ScreenThickness = 0.500000
-ScreenDistance = 4.000000
+ScreenDistance = 1.500000
 ScreenRight = 0.000000
 ScreenUp = 0.000000
 ScreenPitch = 0.000000
@@ -22,5 +22,5 @@ DontClearScreen = False
 CanReadCameraAngles = False
 DetectSkybox = False
 DontDrawScreenSpace = True
-VRStateId = 1
-VRIssues = Slow, upsidedown HUD, inverse HUD depth
+VRStateId = 2
+VRIssues = HUD background blocks scene
