Updated INIs for Ghost in the Shell and Assassin's Creed Bloodlines.

--- a/Sys/GameSettings/ULUS10020.ini
+++ b/Sys/GameSettings/ULUS10020.ini
@@ -1,18 +1,18 @@
 ﻿# ULUS10020 - GHOST IN THE SHELL STAND ALONE COMPLEX
 [VR]
-UnitsPerMetre = 100.000000
-HudThickness = 0.000000
-HudDistance = 0.150000
-CameraForward = 0.000000
-CameraPitch = 0.000000
-AimDistance = 16.000000
-ScreenHeight = 0.100000
-ScreenThickness = 0.040000
-ScreenDistance = 0.200000
-ScreenRight = 0.000000
-ScreenUp = 0.000000
-ScreenPitch = 0.000000
-TelescopeMaxFOV = 0.000000
+UnitsPerMetre = 83
+HudThickness = 0.1
+HudDistance = 1.5
+CameraForward = 0.0
+CameraPitch = 0.0
+AimDistance = 7.0
+ScreenHeight = 1.0
+ScreenThickness = 0.7
+ScreenDistance = 2.0
+ScreenRight = 0.0
+ScreenUp = 0.0
+ScreenPitch = 0.0
+TelescopeMaxFOV = 0.0
 Disable3D = False
 HudFullscreen = False
 TelescopeEye = 0
@@ -22,5 +22,7 @@ DontClearScreen = False
 CanReadCameraAngles = False
 DetectSkybox = False
 DontDrawScreenSpace = True
+OverrideClearColor = True
+BackgroundColor = 5260339
 VRStateId = 2
-VRIssues = flickering HUD, flickering background, 2D screen blocking view
+VRIssues = vibrating HUD, culling
