--- a/Sys/GameSettings/ULUS10455.ini
+++ b/Sys/GameSettings/ULUS10455.ini
@@ -1,14 +1,14 @@
 ﻿# ULUS10455 - Assassin's Creed: Bloodlines™
 [VR]
 UnitsPerMetre = 1.0
-HudThickness = 0.03
-HudDistance = 0.25
-CameraForward = 0.0
+HudThickness = 0.10
+HudDistance = 1.4
+CameraForward = 0.1
 CameraPitch = 0.0
 AimDistance = 7.0
-ScreenHeight = 0.15
-ScreenThickness = 0.01
-ScreenDistance = 0.27
+ScreenHeight = 1.5
+ScreenThickness = 0.5
+ScreenDistance = 1.5
 ScreenRight = 0.0
 ScreenUp = 0.0
 ScreenPitch = 0.0
@@ -22,5 +22,8 @@ DontClearScreen = False
 CanReadCameraAngles = False
 DetectSkybox = False
 DontDrawScreenSpace = True
-VRStateId = 2
-VRIssues = move through the HUD to see, lots of culling
+Before3DIsBackground = True
+OverrideClearColor = False
+BackgroundColor = 0
+VRStateId = 3
+VRIssues = lots of culling
