Update settings for games that used scissor.

--- a/Sys/GameSettings/ULUS10128.ini
+++ b/Sys/GameSettings/ULUS10128.ini
@@ -22,5 +22,7 @@ DontClearScreen = False
 CanReadCameraAngles = False
 DetectSkybox = False
 DontDrawScreenSpace = True
+OverrideClearColor = False
+BackgroundColor = 0
 VRStateId = 3
-VRIssues = Flickering intros (+top left), camera angles, look down to read, culling
+VRIssues = Flickering intros (+top left), camera angles, whole map shown, culling
