--- a/Sys/GameSettings/ULUS10505.ini
+++ b/Sys/GameSettings/ULUS10505.ini
@@ -26,4 +26,4 @@ Before3DIsBackground = True
 OverrideClearColor = False
 BackgroundColor = 0
 VRStateId = 2
-VRIssues = Camera angles, near sky, z-fighting, unreadable HUD text
+VRIssues = Camera angles, near sky, z-fighting
