--- a/Sys/GameSettings/UCUS98632.ini
+++ b/Sys/GameSettings/UCUS98632.ini
@@ -21,5 +21,7 @@ HudOnTop = False
 DontClearScreen = False
 CanReadCameraAngles = False
 DetectSkybox = False
+OverrideClearColor = False
+BackgroundColor = 0
 VRStateId = 3
-VRIssues = invisible ingame menu, viewport issues, menu issues, partial skybox
+VRIssues = in-car view doesn't work any more, minor viewport issues, partial skybox
