Subtitles and HUD depth are fixed in Family Guy.

--- a/Sys/GameSettings/ULES00601.ini
+++ b/Sys/GameSettings/ULES00601.ini
@@ -22,5 +22,7 @@ DontClearScreen = True
 CanReadCameraAngles = False
 DetectSkybox = False
 DontDrawScreenSpace = False
+OverrideClearColor = False
+BackgroundColor = 0
 VRStateId = 4
-VRIssues = Camera angles, no subtitles, minor HUD depth issues, imperfect depth layering in start screen
+VRIssues = Camera angles, some culling, imperfect depth layering in start screen
