--- a/UI/UI.vcxproj
+++ b/UI/UI.vcxproj
@@ -225,9 +225,12 @@
       <PreprocessorDefinitions Condition="Exists('../ext/openvr')">HAVE_OPENVR;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <PreprocessorDefinitions Condition="Exists('../ext/OSVR')">HAVE_OSVR;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <AdditionalIncludeDirectories>../ext/zlib;../ext/LibOVR/Include;../ext/LibOVR/Src;../ext/openvr/headers;../ext/OSVR/include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <ExceptionHandling>Async</ExceptionHandling>
     </ClCompile>
     <Link>
-      <AdditionalLibraryDirectories>../ext/OpenAL\$(PlatformName);../ext/LibOVR\Lib\$(PlatformName)\VS2013;../ext/LibOVR\Lib\Windows\$(PlatformName)\$(Configuration)\VS2013;../ext/openvr\lib\win64;../ext/OSVR\lib;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
+      <AdditionalLibraryDirectories>../ext/OpenAL\$(PlatformName);../ext/LibOVR\Lib\$(PlatformName)\VS2013;../ext/LibOVR\Lib\Windows\$(PlatformName)\$(Configuration)\VS2013;../ext/OSVR\lib;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
+      <AdditionalLibraryDirectories Condition="'$(Platform)'=='x64'">../ext/openvr\lib\win64;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
+      <AdditionalLibraryDirectories Condition="'$(Platform)'=='Win32'">../ext/openvr\lib\win32;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
       <AdditionalDependencies Condition="Exists('../ext/OSVR/lib/osvrClientKit.lib')">osvrClientKit.lib;%(AdditionalDependencies)</AdditionalDependencies>
       <AdditionalDependencies Condition="'$(Configuration)|$(Platform)'=='Debug|x64' And Exists('../ext/LibOVR/Lib/x64/VS2013/libovr64d.lib')">libovr64d.lib;%(AdditionalDependencies)</AdditionalDependencies>
       <AdditionalDependencies Condition="'$(Configuration)|$(Platform)'=='Debug|x64' And Exists('../ext/LibOVR/Lib/Windows/x64/Debug/VS2013/libovr.lib')">libovr.lib;%(AdditionalDependencies)</AdditionalDependencies>
