Fixed one issue with Assassin's Creed, but uncovered another. I know how to fix this issue, I just have to get around to it.

--- a/Sys/GameSettings/ULUS10455.ini
+++ b/Sys/GameSettings/ULUS10455.ini
@@ -26,4 +26,4 @@ Before3DIsBackground = True
 OverrideClearColor = False
 BackgroundColor = 0
 VRStateId = 3
-VRIssues = lots of culling
+VRIssues = HUD makes things 2D
