Game settings with culling codes and some 60 FPS cheats.

--- a/Sys/GameSettings/ULUS10020.ini
+++ b/Sys/GameSettings/ULUS10020.ini
@@ -26,3 +26,14 @@ OverrideClearColor = True
 BackgroundColor = 5260339
 VRStateId = 2
 VRIssues = vibrating HUD, culling
+
+[VRCheats]
+_C1 60 fps
+_L 0xE003083C 0x0015A334
+_L 0x2015A334 0x3C1B3F80
+_L 0x2015A33C 0x449BE000
+_L 0x2015A3B8 0x4600E003
+_C0 60 fps [Disable]
+_L 0x2015A334 0x4614083C
+_L 0x2015A33C 0x4501FFF3
+_L 0x2015A3B8 0x4600A003
