--- a/Sys/GameSettings/ULUS10063.ini
+++ b/Sys/GameSettings/ULUS10063.ini
@@ -24,3 +24,11 @@ DetectSkybox = False
 DontDrawScreenSpace = True
 VRStateId = 3
 VRIssues = seasickness, camera angles, flickering videos
+
+[VRCheats]
+_C1 disable all culling
+_L 0x20336054 0x03E00008
+_L 0x20336058 0x20020000
+_C0 disable terrain culling
+_L 0x20336788 0x03E00008
+_L 0x2033678C 0x20020000
