--- a/Sys/GameSettings/ULUS10455.ini
+++ b/Sys/GameSettings/ULUS10455.ini
@@ -27,3 +27,8 @@ OverrideClearColor = False
 BackgroundColor = 0
 VRStateId = 3
 VRIssues = HUD makes things 2D
+
+[VRCheats]
+_C1 disable culling
+_L 0x202654CC 0x03E00008
+_L 0x202654D0 0x20020001
