--- a/Sys/GameSettings/ULUS10472.ini
+++ b/Sys/GameSettings/ULUS10472.ini
@@ -23,4 +23,9 @@ CanReadCameraAngles = False
 DetectSkybox = False
 DontDrawScreenSpace = True
 VRStateId = 3
-VRIssues = Flickering HUD
+VRIssues = Flickering HUD and background
+
+[VRCheats]
+_C1 disable all culling
+_L 0x20013738 0x03E00008
+_L 0x2001373C 0x20020000
