--- a/Sys/GameSettings/ULUS10505.ini
+++ b/Sys/GameSettings/ULUS10505.ini
@@ -1,18 +1,18 @@
 ﻿# ULUS10505 - KINGDOM HEARTS Birth by Sleep
 [VR]
-UnitsPerMetre = 1.000000
-HudThickness = 0.000000
-HudDistance = 1.500000
-CameraForward = 0.000000
-CameraPitch = 0.000000
-AimDistance = 7.000000
-ScreenHeight = 1.500000
-ScreenThickness = 0.000000
-ScreenDistance = 1.500000
-ScreenRight = 0.000000
-ScreenUp = 0.000000
-ScreenPitch = 0.000000
-TelescopeMaxFOV = 0.000000
+UnitsPerMetre = 1.0
+HudThickness = 20.0
+HudDistance = 1.5
+CameraForward = 0.0
+CameraPitch = 0.0
+AimDistance = 7.0
+ScreenHeight = 1.5
+ScreenThickness = 0.0
+ScreenDistance = 1.5
+ScreenRight = 0.0
+ScreenUp = 0.0
+ScreenPitch = 0.0
+TelescopeMaxFOV = 0.0
 Disable3D = False
 HudFullscreen = False
 TelescopeEye = 0
@@ -27,3 +27,10 @@ OverrideClearColor = False
 BackgroundColor = 0
 VRStateId = 2
 VRIssues = Camera angles, near sky, z-fighting
+
+[VRCheats]
+_C1 disable some culling
+_L 0x20033614 0x03E00008
+_L 0x20033618 0x20020000
+_C1 Force 60 FPS Mode
+_L 0x21722E08 0x00000000
