--- a/Sys/GameSettings/ULUS10566.ini
+++ b/Sys/GameSettings/ULUS10566.ini
@@ -22,3 +22,11 @@ MetroidPrime = 0
 DontDrawScreenSpace = True
 VRStateId = 4
 VRIssues = Planet's Core sky, Motion sickness, character invisible if too close
+
+[VRCheats]
+_C1 Force 60 FPS
+_L 0x20413AA4 0x00000001
+_C0 Force 30 FPS
+_L 0x20413AA4 0x00000002
+_C0 Force 20 FPS
+_L 0x20413AA4 0x00000003
