--- a/Sys/GameSettings/ULUS10248.ini
+++ b/Sys/GameSettings/ULUS10248.ini
@@ -1,18 +1,18 @@
 ﻿# ULUS10248 - SHReK the THiRD™
 [VR]
-UnitsPerMetre = 0.500000
-HudThickness = 0.000000
-HudDistance = 0.200000
-CameraForward = 1.000000
-CameraPitch = 15.000000
-AimDistance = 7.000000
-ScreenHeight = 0.100000
-ScreenThickness = 0.000000
-ScreenDistance = 0.200000
-ScreenRight = 0.000000
-ScreenUp = 0.000000
-ScreenPitch = 0.000000
-TelescopeMaxFOV = 0.000000
+UnitsPerMetre = 0.5
+HudThickness = 0.1
+HudDistance = 1.5
+CameraForward = 1.0
+CameraPitch = 15.0
+AimDistance = 7.0
+ScreenHeight = 2.0
+ScreenThickness = 0.1
+ScreenDistance = 2.0
+ScreenRight = 0.0
+ScreenUp = 0.0
+ScreenPitch = 0.0
+TelescopeMaxFOV = 0.0
 Disable3D = False
 HudFullscreen = False
 TelescopeEye = 0
@@ -22,5 +22,10 @@ DontClearScreen = False
 CanReadCameraAngles = False
 DetectSkybox = False
 DontDrawScreenSpace = True
-VRStateID = 2
-VRIssues = move through HUD to see, culling, camera angles
+VRStateID = 4
+VRIssues = camera angles
+
+[VRCheats]
+_C1 disable culling
+_L 0x202115F8 0x03E00008
+_L 0x202115FC 0x20020000
