Completely disable culling for Family Guy.

--- a/Sys/GameSettings/ULES00601.ini
+++ b/Sys/GameSettings/ULES00601.ini
@@ -25,4 +25,9 @@ DontDrawScreenSpace = False
 OverrideClearColor = False
 BackgroundColor = 0
 VRStateId = 4
-VRIssues = Camera angles, some culling, imperfect depth layering in start screen
+VRIssues = Camera angles, imperfect depth layering in start screen
+
+[VRCheats]
+_C1 disable culling
+_L 0x20077ed0 0x03E00008
+_L 0x20077ed4 0x20020001
