Partial culling codes for Star Soldier.

--- a/Sys/GameSettings/ULJM05026.ini
+++ b/Sys/GameSettings/ULJM05026.ini
@@ -31,3 +31,9 @@ VRIssues = start screen rotated, junk on HMD when you lose, culling, sky rectang
 
 [General]
 InternalScreenRotation = 2
+
+[VRCheats]
+_C1 disable culling green blocks
+_L 0x2003e030 0x00000000
+_C1 disable culling P blocks
+_L 0x2003fedc 0x00000000
