Slightly reduce culling in Avatar.

--- a/Sys/GameSettings/ULUS10451.ini
+++ b/Sys/GameSettings/ULUS10451.ini
@@ -23,4 +23,61 @@ CanReadCameraAngles = False
 DetectSkybox = False
 DontDrawScreenSpace = True
 VRStateId = 4
-VRIssues = camera angles
+VRIssues = culling, camera angles
+
+[VRCheats]
+_C1 reduce culling truck
+_L 0x2006DD58 0x00000000
+_C1 disable culling enemies
+_L 0x203C8948 0x00000000
+
+_C0 disable culling unknown 3
+_L 0x20039BD0 0x03E00008
+_L 0x20039BD4 0x20020000
+
+_C0 12 crash
+_L 0x20053864 0x03E00008
+_L 0x20053868 0x20020000
+_C0 13 crash
+_L 0x2005381C 0x00000000
+_C0 14 crash
+_L 0x203BF174 0x03E00008
+_L 0x203BF178 0x20020000
+_C0 15 blue edges
+_L 0x20045EE0 0x00000000
+_C0 disable unknown 16
+_L 0x2037DF00 0x00000000
+
+_C0 draw test 1 crash
+_L 0x20393730 0x03E00008
+_L 0x20393734 0x20020001
+
+_C0 draw test 3 cull most objects? 447A
+_L 0x203be718 0x3C01c47a
+_L 0x203be71C 0x44810000
+_L 0x203be720 0x03E00008
+_L 0x203be724 0x20020001
+_C0 disable 10 sky background
+_L 0x203BE840 0x00000000
+
+_C0 glitchy plants and polygons
+_L 0x200558F0 0x03E00008
+_L 0x200558F4 0x20020000
+
+_C0 reduce culling unknown 5
+_L 0x20039C08 0x00000000
+_C0 reduce culling unknown 6
+_L 0x20005A24 0x00000000
+
+_C0 cull self glitch
+_L 0x203C7B34 0x00000000
+_C0 glitchy ground
+_L 0x2006DD7C 0x00000000
+_C0 glitchy ground 2
+_L 0x20039C40 0x03E00008
+_L 0x20039C44 0x20020000
+
+_C0 piggyback
+_L 0x20337ddc 0x00000000
+_C0 glitchy body
+_L 0x20045EC8 0x00000000
